tests/samples/valid/label_hijacking.pn
fn main() -> i32
{
	var x = 200;

	goto entry;

	x = 23;

	entry:

	return:
	x
}
