tests/samples/invalid/length_of_int.pn
fn main() -> usize
{
	var x: i32 = 3;
	var y = |x|;
	return: y
}
